--- a/python_code/PCST/02_PCST_dupl_PPI.ipynb
+++ b/python_code/PCST/02_PCST_dupl_PPI.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d3dad024",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7879eb51",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
        "<module 'neighborhoods' from '/home/braunger/masterthesis/python_code/PCST/neighborhoods.py'>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "2061c3d9",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "7265345e",
    "metadata": {},
    "outputs": [
@@ -104,8 +104,8 @@
        "      <th></th>\n",
        "      <th>transition</th>\n",
        "      <th>gene</th>\n",
-       "      <th>FPKM_t0</th>\n",
-       "      <th>FPKM_t1</th>\n",
+       "      <th>TPM_t0</th>\n",
+       "      <th>TPM_t1</th>\n",
        "      <th>log2_fc</th>\n",
        "      <th>abs_log2_fc</th>\n",
        "    </tr>\n",
@@ -113,63 +113,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>fc_70_80</td>\n",
-       "      <td>PI16</td>\n",
-       "      <td>351.71975</td>\n",
-       "      <td>17.206346</td>\n",
-       "      <td>-4.353414</td>\n",
-       "      <td>4.353414</td>\n",
+       "      <td>fc_50_60</td>\n",
+       "      <td>FOXS1</td>\n",
+       "      <td>0.173743</td>\n",
+       "      <td>15.570615</td>\n",
+       "      <td>6.485726</td>\n",
+       "      <td>6.485726</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>fc_50_60</td>\n",
-       "      <td>ACAN</td>\n",
-       "      <td>2.99550</td>\n",
-       "      <td>58.069632</td>\n",
-       "      <td>4.276915</td>\n",
-       "      <td>4.276915</td>\n",
+       "      <td>fc_80_90</td>\n",
+       "      <td>ADGRG7</td>\n",
+       "      <td>0.102850</td>\n",
+       "      <td>8.398269</td>\n",
+       "      <td>6.351481</td>\n",
+       "      <td>6.351481</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>fc_50_60</td>\n",
-       "      <td>NTN4</td>\n",
-       "      <td>3.42550</td>\n",
-       "      <td>64.420368</td>\n",
-       "      <td>4.233130</td>\n",
-       "      <td>4.233130</td>\n",
+       "      <td>fc_10_20</td>\n",
+       "      <td>CD177</td>\n",
+       "      <td>37.384831</td>\n",
+       "      <td>0.551649</td>\n",
+       "      <td>-6.082558</td>\n",
+       "      <td>6.082558</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>fc_0_10</td>\n",
-       "      <td>ACTG2</td>\n",
-       "      <td>28.01490</td>\n",
-       "      <td>1.564571</td>\n",
-       "      <td>-4.162355</td>\n",
-       "      <td>4.162355</td>\n",
+       "      <td>fc_50_60</td>\n",
+       "      <td>MYH11</td>\n",
+       "      <td>0.170661</td>\n",
+       "      <td>11.121060</td>\n",
+       "      <td>6.026017</td>\n",
+       "      <td>6.026017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>fc_70_80</td>\n",
-       "      <td>CLDN11</td>\n",
-       "      <td>5.67700</td>\n",
-       "      <td>76.747923</td>\n",
-       "      <td>3.756927</td>\n",
-       "      <td>3.756927</td>\n",
+       "      <td>fc_0_10</td>\n",
+       "      <td>KCNMB1</td>\n",
+       "      <td>9.005299</td>\n",
+       "      <td>0.150032</td>\n",
+       "      <td>-5.907434</td>\n",
+       "      <td>5.907434</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  transition    gene    FPKM_t0    FPKM_t1   log2_fc  abs_log2_fc\n",
-       "0   fc_70_80    PI16  351.71975  17.206346 -4.353414     4.353414\n",
-       "1   fc_50_60    ACAN    2.99550  58.069632  4.276915     4.276915\n",
-       "2   fc_50_60    NTN4    3.42550  64.420368  4.233130     4.233130\n",
-       "3    fc_0_10   ACTG2   28.01490   1.564571 -4.162355     4.162355\n",
-       "4   fc_70_80  CLDN11    5.67700  76.747923  3.756927     3.756927"
+       "  transition    gene     TPM_t0     TPM_t1   log2_fc  abs_log2_fc\n",
+       "0   fc_50_60   FOXS1   0.173743  15.570615  6.485726     6.485726\n",
+       "1   fc_80_90  ADGRG7   0.102850   8.398269  6.351481     6.351481\n",
+       "2   fc_10_20   CD177  37.384831   0.551649 -6.082558     6.082558\n",
+       "3   fc_50_60   MYH11   0.170661  11.121060  6.026017     6.026017\n",
+       "4    fc_0_10  KCNMB1   9.005299   0.150032 -5.907434     5.907434"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "c8f0747e",
    "metadata": {},
    "outputs": [
@@ -212,44 +212,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ACTG2_t0</td>\n",
-       "      <td>4.162355</td>\n",
+       "      <th>4</th>\n",
+       "      <td>KCNMB1_t0</td>\n",
+       "      <td>5.907434</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>NTN4_t0</td>\n",
-       "      <td>2.852316</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>ACAN_t0</td>\n",
-       "      <td>2.716139</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
+       "      <th>9</th>\n",
        "      <td>PTGDS_t0</td>\n",
-       "      <td>2.643388</td>\n",
+       "      <td>5.533339</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>NEFM_t0</td>\n",
-       "      <td>2.585507</td>\n",
+       "      <th>10</th>\n",
+       "      <td>ACTG2_t0</td>\n",
+       "      <td>5.507910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>ESAM_t0</td>\n",
+       "      <td>4.691189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>FOXE1_t0</td>\n",
+       "      <td>4.277117</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        name     prize\n",
-       "3   ACTG2_t0  4.162355\n",
-       "23   NTN4_t0  2.852316\n",
-       "34   ACAN_t0  2.716139\n",
-       "38  PTGDS_t0  2.643388\n",
-       "42   NEFM_t0  2.585507"
+       "         name     prize\n",
+       "4   KCNMB1_t0  5.907434\n",
+       "9    PTGDS_t0  5.533339\n",
+       "10   ACTG2_t0  5.507910\n",
+       "33    ESAM_t0  4.691189\n",
+       "47   FOXE1_t0  4.277117"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "be805c68",
    "metadata": {},
    "outputs": [],
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "183e1577",
    "metadata": {},
    "outputs": [
@@ -292,7 +292,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of terminals: 2630\n"
+      "Number of terminals: 2822\n"
      ]
     }
    ],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "862e13b9",
    "metadata": {},
    "outputs": [
@@ -386,7 +386,7 @@
        "4   RALBP1_t0  ARF5_t0  0.980554"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
